--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 
   </header>
   <div role="main">
-
+    <div class="row">
+      <div class="span12 well"></div>
+    </div>
+    <div class="row">
+      <div class="span12 well"></div>
+    </div>
+    <div class="row">
+      <div class="span12 well"></div>
+    </div>
   </div>
   <footer>
 
