--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                  <li><a href="">Logout</a></li>
+                  <li class="hidden"><a href="">Logout</a></li>
+                  <li><a href="">Login</a></li>
               </ul>
             </li>
           </ul>
