--- a/index.html
+++ b/index.html
@@ -35,14 +35,7 @@
     </div>
   </header>
   <div role="main">
-    <div class="row">
-      <div class="span12 well"></div>
-    </div>
-    <div class="row">
-      <div class="span12 well"></div>
-    </div>
-    <div class="row">
-      <div class="span12 well"></div>
+    <div id="news"> 
     </div>
   </div>
   <footer>
