--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
+          <ul class="nav pull-left">
+          <li><input type="text" placeholder="http://feeds.feedburner.com/fayerwayer" value="http://feeds.feedburner.com/fayerwayer" id="feed"></li>
+          </ul>
           <ul class="nav pull-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
